--- a/DataCollection/Data Collection Android side/.classpath
+++ b/DataCollection/Data Collection Android side/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/FacebookSDK"/>
+	<classpathentry kind="lib" path="C:/Users/Tom/Downloads/Install Files/facebook-android-sdk-3.5.1/facebook-android-sdk-3.5.1/facebook/bin/facebooksdk.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tom/Downloads/Install Files/facebook-android-sdk-3.5.1/facebook-android-sdk-3.5.1/libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
