--- a/DataCollection/Data Collection Server side/.classpath
+++ b/DataCollection/Data Collection Server side/.classpath
@@ -2,15 +2,15 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="facebook4j-core-2.0.4.jar"/>
-	<classpathentry kind="lib" path="jsoup-1.7.2.jar"/>
-	<classpathentry kind="lib" path="twitter4j-core-3.0.5.jar"/>
-	<classpathentry kind="lib" path="sqlite-jdbc-3.7.2.jar"/>
-	<classpathentry kind="lib" path="httpclient-4.3.3.jar"/>
-	<classpathentry kind="lib" path="httpclient-cache-4.3.3.jar"/>
-	<classpathentry kind="lib" path="httpcore-4.3.2.jar"/>
-	<classpathentry kind="lib" path="httpmime-4.3.3.jar"/>
-	<classpathentry kind="lib" path="commons-codec-1.6.jar"/>
-	<classpathentry kind="lib" path="commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="libs/facebook4j-core-2.0.4.jar"/>
+	<classpathentry kind="lib" path="libs/jsoup-1.7.2.jar"/>
+	<classpathentry kind="lib" path="libs/twitter4j-core-3.0.5.jar"/>
+	<classpathentry kind="lib" path="libs/sqlite-jdbc-3.7.2.jar"/>
+	<classpathentry kind="lib" path="libs/httpclient-4.3.3.jar"/>
+	<classpathentry kind="lib" path="libs/httpclient-cache-4.3.3.jar"/>
+	<classpathentry kind="lib" path="libs/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="libs/httpmime-4.3.3.jar"/>
+	<classpathentry kind="lib" path="libs/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="libs/commons-logging-1.1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
