--- a/DataCollection/Data Collection Server side/.classpath
+++ b/DataCollection/Data Collection Server side/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="libs/httpmime-4.3.3.jar"/>
 	<classpathentry kind="lib" path="libs/commons-codec-1.6.jar"/>
 	<classpathentry kind="lib" path="libs/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="libs/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
