--- a/DataCollection/Data Collection Android side/.classpath
+++ b/DataCollection/Data Collection Android side/.classpath
@@ -7,10 +7,11 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="C:/Users/Tom/Downloads/Install Files/facebook-android-sdk-3.5.1/facebook-android-sdk-3.5.1/facebook/bin/facebooksdk.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tom/Downloads/Install Files/facebook-android-sdk-3.5.1/facebook-android-sdk-3.5.1/libs/android-support-v4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tom/Documents/GitHub/DataCollection/DataCollection/Data Collection Android side/libs/twitter4j-async-3.0.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tom/Documents/GitHub/DataCollection/DataCollection/Data Collection Android side/libs/twitter4j-core-3.0.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tom/Documents/GitHub/DataCollection/DataCollection/Data Collection Android side/libs/twitter4j-examples-3.0.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tom/Documents/GitHub/DataCollection/DataCollection/Data Collection Android side/libs/twitter4j-media-support-3.0.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tom/Documents/GitHub/DataCollection/DataCollection/Data Collection Android side/libs/twitter4j-stream-3.0.5.jar"/>
+	<classpathentry kind="lib" path="libs/jsoup-1.7.2.jar"/>
+	<classpathentry kind="lib" path="libs/twitter4j-async-3.0.5.jar"/>
+	<classpathentry kind="lib" path="libs/twitter4j-core-3.0.5.jar"/>
+	<classpathentry kind="lib" path="libs/twitter4j-examples-3.0.5.jar"/>
+	<classpathentry kind="lib" path="libs/twitter4j-media-support-3.0.5.jar"/>
+	<classpathentry kind="lib" path="libs/twitter4j-stream-3.0.5.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
