--- a/DataCollection/Data Collection Android side/bin/AndroidManifest.xml
+++ b/DataCollection/Data Collection Android side/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.messagesiphon"
+    package="edu.uiowa.datacollection"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -22,7 +22,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.messagesiphon.datacollection.MainActivity"
+            android:name="edu.uiowa.datacollection.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,11 +31,11 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.example.messagesiphon.datacollection.MessageService" >
+        <service android:name="edu.uiowa.datacollection.MessageService" >
         </service>
 
         <activity
-            android:name="com.example.messagesiphon.makeuser.MakeUser"
+            android:name="edu.uiowa.datacollection.makeuser.MakeUser"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
