Changes to Collect files and Twitter Data Manager
-Updated JsonHelper to report errors more accurately
-Updated properties file to support multiple URLs, everything but the
base URL is appended to the base url
- Added error checking in CollectFacebookData, the ability to ignore
people who skipped Facebook registration, and the ability to toggle
saving JSON data.
- Did the same for CollectTwitterData and cleaned the file up
- added more urls to PropertyHelper
- Renamed user.getTweetID to user.getTwitterID
- Removed unused methods in twitter's DataManager (if these are needed
feel free to put them back). Also changed method names to make more
consistent across managers, cleaned code, made converations and status
data saved in local vars, added saveJsonData to file method

--- a/DataCollection/Data Collection Server side/dataCollection.properties
+++ b/DataCollection/Data Collection Server side/dataCollection.properties
@@ -1,1 +1,5 @@
-URL=http://128.255.45.52:7777/server/
+BASE_URL=http://128.255.45.52:7777/server
+GET_FACEBOOK_TOKENS=/getfacetoken/
+FACEBOOK_UPLOAD_URL=/
+GET_TWITTER_TOKENS=/gettwittertoken/
+TWITTER_UPLOAD_URL=/
