--- a/DataCollection/Data Collection Server side/dataCollection.properties
+++ b/DataCollection/Data Collection Server side/dataCollection.properties
@@ -1,5 +1,5 @@
-BASE_URL=http://128.255.227.134:7001/server
-GET_FACEBOOK_TOKENS=/getfacetoken/
+BASE_URL=http://128.255.45.52:7777/DataCollection
+GET_FACEBOOK_TOKENS_URL=/getfacetoken/
 FACEBOOK_UPLOAD_URL=/
-GET_TWITTER_TOKENS=/gettwittertoken/
+GET_TWITTER_TOKENS_URL=/gettwittertoken/
 TWITTER_UPLOAD_URL=/
