--- a/DataCollection/Data Collection Server side/dataCollection.properties
+++ b/DataCollection/Data Collection Server side/dataCollection.properties
@@ -1,5 +1,5 @@
-BASE_URL=http://127.0.0.1:8002/DataCollection
+BASE_URL=http://172.23.1.193:7777/DataCollection
 GET_FACEBOOK_TOKENS_URL=/getfacetoken/
-FACEBOOK_UPLOAD_URL=/
+FACEBOOK_UPLOAD_URL=/postfacebook/
 GET_TWITTER_TOKENS_URL=/gettwittertoken/
 TWITTER_UPLOAD_URL=/posttwitterseparate/
